kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-blog-service
spec:
  selector:
    app: go-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
